Vue.js для начинающих, урок 4: рендеринг списков

--- a/index.html
+++ b/index.html
@@ -27,6 +27,14 @@
       <p v-else-if="inventory <= 10 && inventory > 0">Almost sold out!</p>
       <p v-else>Out of Stock</p>
       <!-- <a :href="link" target="_blank">More products like this</a> -->
+
+      <div v-for="variant in variants" :key="variant.variantId">
+        <p>{{variant.variantColor}}</p>
+      </div>
+
+      <ul>
+        <li v-for="size in sizes">{{size}}</li>
+      </ul>
     </div>
     
   </div>
