Lesson 5 - Done. События и методы v-on:click, @mouseover, methods: {}

--- a/index.html
+++ b/index.html
@@ -25,13 +25,19 @@
           <ul>
             <li v-for="detail in details">{{ detail }}</li>
           </ul>
-          <div v-for="variant in variants" :key="variant.variantId">
+
+          <!-- <div v-for="variant in variants" :key="variant.variantId">
             <p>{{ variant.variantColor }}</p>
+          </div> -->
+          <div v-for="variant in variants" :key="variant.variantId">
+            <p @mouseover="updateProduct(variant.variantImage)">
+              {{ variant.variantColor }}
+            </p>
           </div>
 
-          <ul>
+          <!-- <ul>
             <li v-for="size in sizes">{{size}}</li>
-          </ul>
+          </ul> -->
         </div>
       </div>
 
@@ -39,6 +45,7 @@
         <p>Cart ({{ cart }})</p>
       </div>
       <button v-on:click="addToCart">Add to cart</button>
+      <button v-on:click="removeCart">Remove from cart</button>
       <!-- <button v-on:click="cart += 1">Add to cart</button> -->
     </div>
     <!-- Lesson 4 -->
