урок 6: привязка классов и стилей

--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
           <h1>{{ product }}</h1>
 
           <p v-if="inStock">In stock</p>
-          <p v-else>Out of Stock</p>
+          <p v-else :class="{ outOfStock: !inStock }">Out of Stock</p>
 
           <ul>
             <li v-for="detail in details">{{ detail }}</li>
@@ -29,10 +29,14 @@
           <!-- <div v-for="variant in variants" :key="variant.variantId">
             <p>{{ variant.variantColor }}</p>
           </div> -->
-          <div v-for="variant in variants" :key="variant.variantId">
-            <p @mouseover="updateProduct(variant.variantImage)">
-              {{ variant.variantColor }}
-            </p>
+          <div
+            class="color-box"
+            v-for="variant in variants"
+            :key="variant.variantId"
+            :style="{backgroundColor: variant.variantColor}"
+            @mouseover="updateProduct(variant.variantImage)"
+          >
+            <!-- {{ variant.variantColor }} -->
           </div>
 
           <!-- <ul>
@@ -44,7 +48,13 @@
       <div class="cart">
         <p>Cart ({{ cart }})</p>
       </div>
-      <button v-on:click="addToCart">Add to cart</button>
+      <button
+        v-on:click="addToCart"
+        :disabled="!inStock"
+        :class="{ disabledButton: !inStock }"
+      >
+        Add to cart
+      </button>
       <button v-on:click="removeCart">Remove from cart</button>
       <!-- <button v-on:click="cart += 1">Add to cart</button> -->
     </div>
