--- a/index.html
+++ b/index.html
@@ -19,8 +19,12 @@
         <div class="product-info">
           <h1>{{ title }}</h1>
 
-          <p v-if="inStock">In stock</p>
-          <p v-else :class="{ outOfStock: !inStock }">Out of Stock</p>
+          <p>{{sale}}</p>
+
+          <!-- <p v-if="inStock()">In stock</p>
+          <p v-else :class="{ outOfStock: !inStock() }">Out of Stock</p> -->
+          <p v-if="inStock">In Stock</p>
+          <p v-else>Out of Stock</p>
 
           <ul>
             <li v-for="detail in details">{{ detail }}</li>
@@ -31,10 +35,10 @@
           </div> -->
           <div
             class="color-box"
-            v-for="variant in variants"
+            v-for="(variant, index) in variants"
             :key="variant.variantId"
             :style="{backgroundColor: variant.variantColor}"
-            @mouseover="updateProduct(variant.variantImage)"
+            @mouseover="updateProduct(index)"
           >
             <!-- {{ variant.variantColor }} -->
           </div>
