--- a/index.html
+++ b/index.html
@@ -4,86 +4,40 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" type="text/css" href="style.css" />
-    <title>Document</title>
+    <title>Vue - start</title>
   </head>
 
   <body>
     <div class="nav-bar"></div>
 
     <div id="app">
-      <div class="product">
-        <div class="product-image">
-          <img :src="image" />
-        </div>
-
-        <div class="product-info">
-          <h1>{{ title }}</h1>
-
-          <!--распродажа-->
-          <p>{{sale}}</p>
-
-          <!-- <p v-if="inStock()">In stock</p>
-          <p v-else :class="{ outOfStock: !inStock() }">Out of Stock</p> -->
-          <p v-if="inStock">In Stock</p>
-          <p v-else>Out of Stock</p>
-
-          <!-- компоненты -->
-          <!-- <p>Shipping: {{ shipping }}</p> -->
-
-          <ul>
-            <li v-for="detail in details">{{ detail }}</li>
-          </ul>
-
-          <!-- <div v-for="variant in variants" :key="variant.variantId">
-            <p>{{ variant.variantColor }}</p>
-          </div> -->
-          <div
-            class="color-box"
-            v-for="(variant, index) in variants"
-            :key="variant.variantId"
-            :style="{backgroundColor: variant.variantColor}"
-            @mouseover="updateProduct(index)"
-          >
-            <!-- {{ variant.variantColor }} -->
-          </div>
-
-          <!-- <ul>
-            <li v-for="size in sizes">{{size}}</li>
-          </ul> -->
-        </div>
-      </div>
-
-      <button
-        v-on:click="addToCart"
-        :disabled="!inStock"
-        :class="{ disabledButton: !inStock }"
-      >
-        Add to cart
-      </button>
-      <button v-on:click="removeCart">Remove from cart</button>
-      <!-- <button v-on:click="cart += 1">Add to cart</button> -->
-
-      <div class="cart">
-        <p>Cart ({{ cart }})</p>
-      </div>
+      <product></product>
     </div>
-    <!-- Lesson 4 -->
 
-    <!-- <p v-if="inventory > 10">In Stock</p>
+    <script src="vue.js"></script>
+    <script src="main.js"></script>
+  </body>
+</html>
+
+<!-- over -->
+
+<!-- Lesson 4 -->
+
+<!-- <p v-if="inventory > 10">In Stock</p>
           <p v-else-if="inventory <= 10 && inventory > 0">Almost sold out!</p>
           <p v-else>Out of Stock</p> -->
-    <!-- <a :href="link" target="_blank">More products like this</a> -->
+<!-- <a :href="link" target="_blank">More products like this</a> -->
 
-    <!-- <div v-for="variant in variants" :key="variant.variantId">
+<!-- <div v-for="variant in variants" :key="variant.variantId">
             <p>{{variant.variantColor}}</p>
           </div> -->
 
-    <!-- <p v-show="inStock">In Stock</p> -->
+<!-- <p v-show="inStock">In Stock</p> -->
 
-    <!-- <span v-show="onSale">On Sale</span> -->
+<!-- <span v-show="onSale">On Sale</span> -->
 
-    <!-- <script src="https://cdn.jsdelivr.net/npm/vue@2.5.13/dist/vue.js"></script> -->
-    <!-- <div id="app">
+<!-- <script src="https://cdn.jsdelivr.net/npm/vue@2.5.13/dist/vue.js"></script> -->
+<!-- <div id="app">
 
         <div class="product">
       
@@ -99,12 +53,8 @@
         </div>
     </div> -->
 
-    <!-- <div id="app">
+<!-- <div id="app">
         <h1>{{ product }}</h1>
         <p>{{description}}</p>
     </div> -->
-    <!-- <script src="https://unpkg.com/vue"></script> -->
-    <script src="vue.js"></script>
-    <script src="main.js"></script>
-  </body>
-</html>
+<!-- <script src="https://unpkg.com/vue"></script> -->
