--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
 
     <div id="app">
       <product :premium="premium"></product>
+      <!-- <product-details :details="details"></product-details> -->
     </div>
 
     <script src="vue.js"></script>
